--- a/nanalike/nanalike.html
+++ b/nanalike/nanalike.html
@@ -77,7 +77,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/avengers_endgame_2019/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Avengers: Endgame</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Avengers: Endgame</strong>
                               <p class="listing-card__date">2019</p>
                             </div>
                           </li>
@@ -85,7 +86,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/captain_marvel_2019/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Captain Marvel</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Captain Marvel</strong>
                               <p class="listing-card__date">2019</p>
                             </div>
                           </li>
@@ -93,7 +95,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/ant_man_and_the_wasp_2018/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Ant-Man and the Wasp</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Ant-Man and the Wasp</strong>
                               <p class="listing-card__date">2018</p>
                             </div>
                           </li>
@@ -101,7 +104,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/avengers_infinity_war_2018/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Avengers: Infiniy War</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Avengers: Infiniy War</strong>
                               <p class="listing-card__date">2018</p>
                             </div>
                           </li>
@@ -109,7 +113,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/black_panther_2018/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Black Panther</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Black Panther</strong>
                               <p class="listing-card__date">2018</p>
                             </div>
                           </li>
@@ -117,7 +122,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/thor_ragnarok_2017/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Thor: Ragnarok</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Thor: Ragnarok</strong>
                               <p class="listing-card__date">2017</p>
                             </div>
                           </li>
