--- a/javascript/2/var3.html
+++ b/javascript/2/var3.html
@@ -16,7 +16,7 @@
         console.log(n1 != n2);//타입상관없이
         console.log(n1 !== n2);//타입포함
 
-
+//airbnb JS 지침서느낌? 실무용 바벨? ES5 -> ES6 바꿔주는 라이브러리
     </script>
 </body>
 </html>
