--- a/javascript/3/if_and_or.html
+++ b/javascript/3/if_and_or.html
@@ -9,9 +9,12 @@
 <body>
     <script>
         //JS, true/false 를 사용할 수 있는 값들을 알려주는 예제
-        // false : 0, '', undefined, null
+        // false : 0, '', undefined, null // 띄어쓰기 있으면 true 임
         // true : 위에꺼 반대
         // and, or 차이점 (모든 프로그래밍 언어 동일)
+
+        // && 는 false 가 될 가능성이 높은 조건식을 앞쪽에 배치 유리
+        // || 은 true가 될 가능성이 높은 조건식을 앞쪽에 배치 유리
         function ck1() {//true
             console.log('--ck1 called--');
             return 1;
