--- a/javascript/6/async.html
+++ b/javascript/6/async.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <script>
+        //비동기
         console.log('A');
         setTimeout(function(){
             console.log('B');
         }, 1000);
         console.log('C');
+        console.log('D');
     </script>
 </body>
 </html>
