--- a/javascript/2/var4.html
+++ b/javascript/2/var4.html
@@ -16,7 +16,7 @@
         console.log(num1);
         var num3 = 22;
         let num1 = 10;//변수
-        const NUM2 = 20;//상수
+        const NUM2 = 20;//상수, 속도가 빠름, 값이 바뀔일이 없다면 const 쓰는게 좋다
 
 
 
