--- a/javascript/3/fn.html
+++ b/javascript/3/fn.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <script>
+        //방법 1, 익명함수를 sum2 에 담는다.
+        var sum2 = function(n1, n2) {
+            return n1 + n2;
+        }
+        //방법 2
+        // 어떨때는 리턴이 있고, 어떨 때는 리턴이 없고~, 이러한 구조를 만들수는 있다~
+        function sum(n1, n2) {
+            // if(n1 >= 10) { console.log('ddd'); return;}
+            return n1 + n2;
+        }
+
         //함수, 혼자 외롭게,
         //메소드, 소속되어있으면
         function sum(n1, n2) {
