--- a/javascript/3/fn4.html
+++ b/javascript/3/fn4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        //다시 봐
+        //다시 봐, 제일 중요한 콜백함수
         function calc(fn, n1, n2) {
             var result = fn(n1, n2);
             console.log('result : ' + result);
@@ -20,8 +20,8 @@
 
         calc(sum, 10, 50);
 
-        calc(function(n1, n2){
-            return n1 - n2;
+        calc(function(n1, n2){//익명함수 fn 이 가리킴
+            return n1 - n2;//리턴은 나를 호출한 값으로 돌아간다.
         }, 100, 30)
     </script>
 </body>
