--- a/javascript/6/async2.html
+++ b/javascript/6/async2.html
@@ -11,13 +11,13 @@
         //비동기, 싱글스레드
         function fn1() {
             setTimeout(function() {
-                return 10;
+                return 10;//1초 후에 리턴되기 때문에 result 에는 값이 들어가지 못해서 undefined 가 뜬다.
             }, 1000);
         }
 
         function fn2(val) {
             setTimeout(function() {
-                console.log(val + 30);
+                console.log(val + 30);//undefiend + ? = Nan, undefiend * ? = Nan;
             }, 1000);
         }
         var result = fn1();
