--- a/javascript/8/inner.html
+++ b/javascript/8/inner.html
@@ -16,7 +16,7 @@
         // cardsElem.innerHTML = str;//innerHTML : 기존의 글을 대체한다, <> 테그가 적용가능하다.
         // cardsElem.innerText = str;//innerHTML : 기존의 글을 대체한다. <> 테그가 적용되지 않는다.
         // cardsElem.append(str);//기존의 글 뒤에 추가된다, <> 테그가 적용되지 않는다.
-        // cardsElem.appendChild(str);//기존의 글을 대체한다, <> 테그가 적용가능하다.
+        // cardsElem.appendChild(str);//기존의 글을 대체한다, <> 테그가 적용가능하다. ** 태그 객체만 사용할 수 있다.
         // cardsElem.prepend(str);//기존의 글 앞에 추가된다, <> 테그가 적용되지 않는다.
         
     </script>
