--- a/nanalike2.html
+++ b/nanalike2.html
@@ -18,7 +18,7 @@
                 <div class="nav__wrap">
                     <div class="nav__container">
                         <strong class="nav__title">MENU 01</strong>
-                        <div class="nav__list">                            
+                        <div class="nav__list">
                             <div class="nav__item">
                                 <a href="" target="_blank" class="nav__link">Portfolio</a>
                             </div>
@@ -31,12 +31,10 @@
                             <div class="nav__item">
                                 <a href="" target="_blank" class="nav__link">Codepen</a>
                             </div>
-                        </div>
                     </div>
-
                     <div class="nav__container">
                         <strong class="nav__title">MENU 02</strong>
-                        <div class="nav__list">                            
+                        <div class="nav__list">
                             <div class="nav__item">
                                 <a href="" target="_blank" class="nav__link">Portfolio</a>
                             </div>
@@ -57,9 +55,10 @@
         <div class="top-bar">
             <div class="search">
                 <form class="search__form">
-                    <label for="idSearch" class="search__label">Search</label>
-                    <input type=search" id="idSearch" name="search" 
-                        class="search__input" placeholder="What do you want?">
+                    <label for="idSearch" class="search__lable">Search </label>
+
+                        <input type="search" id="idSearch" name="search"
+                           class="search__input" placeholder="What do you want?">
                 </form>
             </div>
             <div class="profile">
@@ -69,17 +68,17 @@
         <div class="main">
             <div class="main__header">
                 <h2 class="main__title">Movies</h2>
-            </div>
+            </div>    
 
             <div class="main__body">
                 <div class="listing-card">
                     <ul class="listing-card__list">
-                        
                         <li class="listing-card__item">
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/avengers_endgame_2019/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Avengers: Endgame</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Avengers: Endgame</strong>
                               <p class="listing-card__date">2019</p>
                             </div>
                           </li>
@@ -87,7 +86,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/captain_marvel_2019/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Captain Marvel</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Captain Marvel</strong>
                               <p class="listing-card__date">2019</p>
                             </div>
                           </li>
@@ -95,7 +95,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/ant_man_and_the_wasp_2018/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Ant-Man and the Wasp</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Ant-Man and the Wasp</strong>
                               <p class="listing-card__date">2018</p>
                             </div>
                           </li>
@@ -103,7 +104,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/avengers_infinity_war_2018/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Avengers: Infinity War</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Avengers: Infiniy War</strong>
                               <p class="listing-card__date">2018</p>
                             </div>
                           </li>
@@ -111,7 +113,8 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/black_panther_2018/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Black Panther</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Black Panther</strong>
                               <p class="listing-card__date">2018</p>
                             </div>
                           </li>
@@ -119,16 +122,14 @@
                             <div class="listing-card__image"
                               style="background-image:url('https://yts.mx/assets/images/movies/thor_ragnarok_2017/large-cover.jpg')">
                             </div>
-                            <div class="listing-card__info"><strong class="listing-card__name">Thor: Ragnarok</strong>
+                            <div class="listing-card__info">
+                              <strong class="listing-card__name">Thor: Ragnarok</strong>
                               <p class="listing-card__date">2017</p>
                             </div>
                           </li>
-
-
                     </ul>
                 </div>
             </div>
-
 
         </div>
     </div>
