--- a/시험/2/login.html
+++ b/시험/2/login.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <div>
-        <label id="id">
-            아이디 : <input type="text" name="uid">
+        <label>
+            아이디 : <input type="text" name="uid" id="id">
         </label>
     </div>
     <div>
-        <label id="pw">
-            비밀번호 : <input type="text" name="upw">
+        <label >
+            비밀번호 : <input type="text" name="upw" id="pw">
         </label>
     </div>
-    <button id="join">회원가입</button>
-    <a href="main.html"><button id="login">로그인</button></a>
+    <a href="join.html"><button>회원가입</button></a>
+    <button id="login">로그인</button>
+    <script src="common.js"></script>
 </body>
 </html>
